--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1800</width>
-    <height>1000</height>
+    <height>1006</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -157,12 +157,12 @@
      <rect>
       <x>860</x>
       <y>930</y>
-      <width>31</width>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>cm</string>
+     <string>kg*m^2</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -178,6 +178,45 @@
      <string>mm</string>
     </property>
    </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit">
+    <property name="geometry">
+     <rect>
+      <x>1350</x>
+      <y>910</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="OpenPort">
+    <property name="geometry">
+     <rect>
+      <x>1500</x>
+      <y>920</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OpenPort</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>1600</x>
+      <y>920</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CheckBox</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -188,8 +227,25 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuSave">
+    <property name="title">
+     <string>Save</string>
+    </property>
+    <addaction name="actionSave_raw_data"/>
+   </widget>
+   <addaction name="menuSave"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionSave_raw_data">
+   <property name="text">
+    <string>Save raw data</string>
+   </property>
+  </action>
+  <action name="actionSave_all">
+   <property name="text">
+    <string>Save all</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
